--- a/GeneralStoreMVC/Views/Home/About.cshtml
+++ b/GeneralStoreMVC/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Us";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Our General Store opened it's doors in 1977.  Since then we have been the standard in providers of access to home-produced items and specialty foods.</p>
