--- a/GeneralStoreMVC/Views/Home/Index.cshtml
+++ b/GeneralStoreMVC/Views/Home/Index.cshtml
@@ -4,9 +4,12 @@
 
 <div class="jumbotron">
     <h1>General Store</h1>
-    <p class="lead">Our general store, located in rural Indiana, is host to a multitude of fine food and items of distinction.<br/>
-    Come browse our products and see what we have for you!</p>
+    <p class="lead">
+        Our general store, located in rural Indiana, is host to a multitude of fine food and items of distinction.<br />
+        Come browse our products and see what we have for you!
+    </p>
     <p>@Html.ActionLink("Check Products", "Index", "Product", null, new { @class = "btn btn-primary btn.large" })</p>
+    <p>@Html.ActionLink("Show Customers", "Index", "Customer", null, new { @class = "btn btn-primary btn.large" })</p>
     <p>@Html.ActionLink("Learn More About Us", "About")</p>
 </div>
 
