--- a/GeneralStoreMVC/Views/Shared/_Layout.cshtml
+++ b/GeneralStoreMVC/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("List New Product", "Create", "Product")</li>
+                    <li>@Html.ActionLink("Create New Customer", "Create", "Customer")</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
