--- a/GeneralStoreMVC/Views/Home/Index.cshtml
+++ b/GeneralStoreMVC/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     </p>
     <p>@Html.ActionLink("Check Products", "Index", "Product", null, new { @class = "btn btn-primary btn.large" })</p>
     <p>@Html.ActionLink("Show Customers", "Index", "Customer", null, new { @class = "btn btn-primary btn.large" })</p>
+    <p>@Html.ActionLink("Get Transactions", "Index", "Transaction", null, new { @class = "btn btn-primary btn.large" })</p>
     <p>@Html.ActionLink("Learn More About Us", "About")</p>
 </div>
 
