--- a/GeneralStoreMVC/Views/Product/Index.cshtml
+++ b/GeneralStoreMVC/Views/Product/Index.cshtml
@@ -24,28 +24,28 @@
         <th>
             @Html.DisplayNameFor(model => model.IsFood)
         </th>
-        <th></th>
     </tr>
+
     @foreach (var item in Model)
     {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.InventoryCount)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Price)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.IsFood)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |
-        @Html.ActionLink("Details", "Details", new { id = item.ProductID }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.ProductID })
-    </td>
-</tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.InventoryCount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsFood)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ProductId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ProductId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ProductId })
+            </td>
+        </tr>
     }
 </table>
