--- a/GeneralStoreMVC/Views/Shared/_Layout.cshtml
+++ b/GeneralStoreMVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - General Store</title>
+    <title>@ViewBag.Title - Tobias Milton's General Store</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("List New Product", "Create", "Product")</li>
                     <li>@Html.ActionLink("Create New Customer", "Create", "Customer")</li>
+                    <li>@Html.ActionLink("Purchase Item", "Create", "Transaction")</li>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
@@ -35,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - A Sampsonite Production</p>
         </footer>
     </div>
 
